--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=hr-payroll
 server.port=8101
 
+#server.port=${PORT:0}
+#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 #hr-worker.ribbon.listOfServers=localhost:8001,localhost:8002
+
+#hystrix deve ser maior que o ribbon
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
